# BlueBox_Data_Analysis_ML

./: .gitignore  AR.py  ARMA.py  AddBoost.py  BATS and TBATS.py  Clean_TimeSeries.py  Clustering(HDBSCAN) _Visualization(t_SNE).py  Clustring.py  Confusion_matrix.py  CrossValidation.py  Data Manipulation and Merging.py  Data_Manupulation.py  Datavis_additional.py  Decision_tree.py  Encoding.py  Exploratory_Data_Analysis.py  Exploratory_Data_Analysis_CLusters.py  FeatureImportance.py  FeatureImportance4.py  Feature_Selection.py  Feature_Selection2.py  Feature_Selection3.py  Feature_Selection_V1(Random Features).py  Feature_Selection_V2(Boruta).py  Featureimportance2.py  Featureimportance3.py  GARH.py  GBM.py  GradiantBoost.py  GradiantBoostRegression.py  GradiantBoostingClass.py  Granger_Causality.py  HDBSCAN.py  HyperParameter.py  Hyperparameter-tuning.py  Hyperparameter_tune.py  Hyperparameter_tuning.py  Imputation.py  Join.py  KNN.py  (+58 more)
.github/workflows/: ci.yml
EPD_Plots/: Quadrant2020.html  Quadrant2021.html
data/: market_agg.csv  result_classification.csv
data_sets/: Cost_Revenue.xlsx  FinanceProgram.xlsx  Market_Tonnes.xlsx  quadrant_data.csv
src/: clustering_hdbscan_tsne.py  config.py  data_model.py  exploratory_analysis_clusters.py  exploratory_data_analysis.py  exploratory_data_analysis_clusters_v1.py  feature_selection_boruta.py  feature_selection_random.py  gradient_boost_regression.py  gradient_boosting_class.py  hyperparameter_tuning.py  local_feature_selection_group.py  local_feature_selection_observation.py
